--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.18.1",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.10",
     "bcrypt": "^5.1.1",
     "ts-node": "^10.9.2",
